tests/invalid/simple/Assign_CompileFail_3.whiley
void f(int x, int y):
     bool z
     z = x + y

